[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "u-doc"
version = "0.1.0"
description = "U-DOC: AI-powered prescription and medical document analyzer"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit==1.32.2",
    "google-generativeai==0.4.1",
    "python-dotenv==1.0.1",
    "Pillow==10.2.0",
    "PyMuPDF==1.23.26",
]

[project.urls]
Homepage = "https://github.com/Bineet043/IBM_u-DOC"
